# vouch

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  PR_BODY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  hatch_build.py  install.sh  llms.txt  netlify.toml  openclaw.plugin.json  package.json  pyproject.toml  server.json
.claude/: settings.json
.claude/commands/: vouch-resolve-issue.md  vouch-status.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  vep.md
.github/workflows/: auto-label-ai-contribution.yml  auto-merge.yml  ci-label.yml  ci.yml  coderabbit-gate.yml  codex.yml  comment-command.yml  desktop.yml  eval.yml  flatpak.yml  gittensor-impact.yml  install-sh.yml  labeler.yml  pr-review-sweep.yml  pr-verify.yml  release.yml  schema-check.yml  security-audit.yml  stale-pr-reaper.yml  trust-gate.yml  ui-screenshot-gate.yml  workflow-lint.yml
.vouch/: .gitignore  audit.log.jsonl  config.yaml
.vouch/captures/: 1218169c-de25-48f4-bd93-70ff77d2fda2.jsonl  5720220c-b77c-4947-aeec-9d6ef91d70b8.jsonl  8a6df051-6c56-4d86-b0ed-66f6638ecfdc.jsonl  ec4b8842-f167-467e-a33c-dc87911c9e0e.jsonl
.vouch/claims/: vouch-starter-reviewed-knowledge.yaml  vouch-uses-a-review-gated-proposal-workflow-agents-propose-c.yaml
.vouch/decided/: 20260521-055206-7d6d92d6.yaml  20260707-092531-154cb163.yaml  20260707-093005-05345f47.yaml  20260707-093125-4d6972f9.yaml
.vouch/pages/: edit-in-obsidian.md  reviewed-knowledge-store.md  session-what-are-the-non-development-related-files-and-folde.md
adapters/: README.md
adapters/claude-code/: .mcp.json  CLAUDE.md.global.snippet  CLAUDE.md.snippet  README.md  install.yaml
adapters/claude-desktop/: README.md  README.snippet.md  claude_desktop_config.json  install.yaml
adapters/cline/: README.md  cline_mcp_servers.json  install.yaml  vscode_settings.json
adapters/codex/: AGENTS.md.snippet  README.md  config.toml  hooks.json  install.yaml
adapters/continue/: README.md  config.yaml  install.yaml
adapters/cursor/: AGENTS.md.snippet  README.md  install.yaml  mcp.json
adapters/generic-mcp/: README.md
adapters/http-tunnel/: Dockerfile  README.md  fly.toml
adapters/jsonl-shell/: README.md  example-pipeline.sh
adapters/openclaw/: AGENTS.md.snippet  README.md  install.yaml  vouch-context-engine.mjs
adapters/windsurf/: README.md  install.yaml  mcp_config.json
adapters/zed/: README.md  install.yaml  settings.json
benchmarks/: README.md  bench_bundle.py  bench_index_rebuild.py  bench_propose.py  bench_search.py  conftest.py
demo/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  vouch-llm.py
desktop/: .gitignore  CHANGELOG.md  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  entrypoint.sh  package-lock.json  package.json  requirements.txt  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  tsconfig.web.json  vitest.config.ts  vouch-review-ui.desktop
desktop/app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/app/src-tauri/capabilities/: default.json
desktop/app/src-tauri/icons/: icon.icns
desktop/app/src-tauri/sidecars/: vouch.json
desktop/app/src-tauri/src/: kb.rs  lib.rs  main.rs  menu.rs  sidecar.rs
desktop/app/src-tauri/src/state/: store.rs
desktop/app/src-tauri/src/util/: paths.rs
desktop/docs/: architecture.md
desktop/flatpak/: Makefile  README.md  com.vouchdev.vouch.desktop  com.vouchdev.vouch.metainfo.xml  com.vouchdev.vouch.yaml  (+2 more)
docs/: INSTALL_FOR_AGENTS.md  PROJECT-INDEX.md  README.md  company-brain.md  compile.md  demo.tape  desktop-flatpak.md  effectiveness.md  embeddings.md  enrich.md  example-session.md  getting-started.md  gittensor.md  metrics.md  migrations.md  multi-agent.md  provenance.md  retrieval.md  review-gate.md  review-ui.md  transports.md
eval/: baseline.json  queries.jsonl
examples/: README.md
migrations/: README.md
proposals/: README.md  VEP-0001-review-gate.md  VEP-0002-jsonl-transport.md  VEP-0003-content-hashed-sources.md  VEP-0004-http-transport.md  VEP-0004-migration.md  VEP-0005-richer-scopes.md  VEP-0006-dual-solve-web.md  VEP-TEMPLATE.md
schemas/: README.md  audit-event.schema.json  bundle.manifest.schema.json  capabilities.schema.json  claim.schema.json  context-item.schema.json  context-pack.schema.json  context-quality.schema.json  entity.schema.json  evidence.schema.json  jsonl-envelope.schema.json  page.schema.json  proposal.schema.json  relation.schema.json  session.schema.json  source.schema.json
scripts/: console.sh  gen_schemas.py  repro_list_pages_crash.py  setup_branch_protection.sh  setup_repo_guards.sh  smoke-capture.sh  smoke-recall.sh
site/: index.html
spec/: README.md  review-gate.md  transports.md
templates/: config.template.yaml
tests/: test_admission.py  test_adopt.py  test_anomaly.py  test_audit.py  test_audit_scoping.py  test_auth.py  test_auto_pr.py  test_brain_commands.py  test_bundle.py  test_capabilities.py  test_capture.py  test_capture_answer.py  test_capture_correction.py  test_capture_filters.py  test_capture_scope.py  test_clear_claims.py  test_cli.py  test_cli_output.py  test_codex_adapter_load_real.py  test_codex_rollout.py  test_compile.py  test_config.py  test_config_model.py  test_conformance.py  test_console.py  test_consolidate.py  test_context.py  test_contradictions.py  test_dead_claim_refs.py  test_delete.py  test_desktop.py  test_desktop_ports.py  test_desktop_sidecar.py  test_diff.py  test_digest.py  test_dual_solve.py  test_effectiveness.py  test_enrich_page.py  test_entity_graph.py  test_eval_recall.py  (+91 more)
web/: app.css  app.js  base.css  gittensor.html  how-it-works.html  index.html  reference.html
webapp/: .gitignore  README.md  app.py  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+554 files in other folders)
