[project]
name = "vouch"
version = "0.0.1"
description = "Git-native, review-gated knowledge base for LLM agents. MCP server + CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "plind-junior" }]
keywords = ["llm", "agent", "knowledge-base", "mcp", "memory", "wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.13.4,<3",
    "click>=8.4.0,<9",
    "click>=8.1,<9",
    "pyyaml>=6,<7",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=5,<6",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "mypy>=1.10",
    "types-pyyaml",
]
embeddings = [
    "sentence-transformers>=2.7,<4",
    "numpy>=1.26,<3",
    "sqlite-vec>=0.1,<1",
]
embeddings-fast = [
    "fastembed>=0.3,<1",
    "onnxruntime>=1.18,<2",
    "numpy>=1.26,<3",
    "sqlite-vec>=0.1,<1",
]
rerank = [
    "sentence-transformers>=2.7,<4",
]

[project.scripts]
vouch = "vouch.cli:cli"

[project.urls]
Homepage = "https://github.com/plind-junior/vouch"
Issues = "https://github.com/plind-junior/vouch/issues"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vouch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: tests that load the real embedding model (slow, network on first run)",
]
