[project]
name = "vouch-kb"
version = "1.2.2"
description = "Git-native, review-gated knowledge base for LLM agents. MCP server + CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "plind-junior" }]
keywords = ["llm", "agent", "knowledge-base", "mcp", "memory", "wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.13.4,<3",
    "click>=8.4.0,<9",
    "pyyaml>=6,<7",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3,<4",
    "numpy>=1.26,<2",
]
web = [
    "fastapi>=0.115,<1",
    "jinja2>=3,<4",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30,<1",
    # uvicorn needs a websockets implementation to serve the /ws realtime
    # channel; without it the WebSocket handshake 500s at runtime.
    "websockets>=12,<16",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-benchmark>=5,<6",
    "pytest-cov>=5,<6",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "types-pyyaml",
    "httpx>=0.28,<1",
    # the wheel-contents regression test builds with the real backend
    "hatchling>=1.21",
]
embeddings-fast = [
    "fastembed>=0.3,<1",
    "onnxruntime>=1.18,<2",
    "numpy>=1.26,<3",
    "sqlite-vec>=0.1,<1",
]
rerank = [
    "sentence-transformers>=2.7,<4",
]

[project.scripts]
vouch = "vouch.cli:cli"
# alias so `uvx vouch-kb serve` resolves — the mcp registry runs the package
# by its pypi identifier (vouch-kb), which otherwise wouldn't match the `vouch`
# console script. keep both pointing at the same entry point.
vouch-kb = "vouch.cli:cli"

[project.urls]
Homepage = "https://github.com/plind-junior/vouch"
Issues = "https://github.com/plind-junior/vouch/issues"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vouch"]

# `vouch install-mcp <host>` copies templates out of adapters/. Ship them
# inside the wheel so installed (pip/pipx) copies can find them; from a
# checkout the repo-root adapters/ still wins (see install_adapter.py).
[tool.hatch.build.targets.wheel.force-include]
"adapters" = "vouch/adapters"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: tests that load the real embedding model (slow, network on first run)",
]

# numpy is an optional runtime dependency (pulled in by the [embeddings] or
# [embeddings-fast] extras); the base CI install only has [dev], so mypy can't
# resolve `import numpy as np` in the embedding-stack modules. Silence the
# missing-stub errors -- the embeddings code paths are only reached when the
# extras are installed, and the test suite for those paths runs in a separate
# job with the extras present.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlite_vec", "sqlite_vec.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastembed", "fastembed.*"]
ignore_missing_imports = true

# fastapi + jinja2 + uvicorn live behind the [web] extra; the base CI install
# only has [dev], so mypy can't resolve them when scanning src/vouch/web/.
# The web module guards its own imports with a clean ImportError message so
# the runtime story stays clean even without the extra.
[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn", "uvicorn.*", "starlette", "starlette.*"]
ignore_missing_imports = true
