[package]
name = "vouch-desktop"
version = "0.0.1"
description = "Native shell for the vouch review console"
authors = ["vouch contributors"]
edition = "2021"

[lib]
name = "vouch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
